2008-12-01  Sebastien Pouliot  <sebastien@ximian.com>

	* CustomAttributeRocks.cs: Use HasCustomAttributes
	* InstructionRocks.cs: Use HasParameters
	* MethodRocks.cs: Use HasConstraints and HasParameters
	* TypeRocks.cs: Use HasInterfaces, HasParameters, HasMethods and
	HasConstructors.

2008-11-29  Sebastien Pouliot  <sebastien@ximian.com>

	* FieldRocks.cs: Use HasCustomAttributes in IsGeneratedCode. Handle
	unresolvable fields in IsVisible.
	* MethodRocks.cs: Use HasCustomAttributes in IsGeneratedCode. Use
	HasParameters in IsEventCallback.
	* TypeRocks.cs: Use HasCustomAttributes in IsGeneratedCode. Handle
	unresolvable fields in IsFlag.

2008-11-19  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeRocks.cs: Make GetMethod smarter and check only the methods
	or the constructors when possible. Split Implements in two parts
	to remove some checks when recursion is needed. Also avoid recursion
	for checking the base types. Add IsPrimitive rock.

2008-11-11  Sebastien Pouliot  <sebastien@ximian.com>

	* ModuleRocks.cs: Change the catch-all for a catch(FormatException)
	since Cecil has been fixed on HEAD.

2008-11-09  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodRocks.cs: Make IsEventCallback safe if the method cannot be
	resolved.

2008-11-08  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodRocks.cs: Fix IsEventCallback to work with generic TEventArgs

2008-11-02  Jesse Jones  <jesjones@mindspring.com>

	* InstructionRocks.cs: Fixed TraceBack so that it only goes back
	if the stack is non empty (the old code had problems with nullary
	static methods for example).

2008-11-02  Sebastien Pouliot  <sebastien@ximian.com>

	* ModuleRocks.cs: Add a catch-all since we can't catch the
	MonoSymbolFileException throw for earlier version of the MDB
	debugging symbols.

2008-10-26  Sebastien Pouliot  <sebastien@ximian.com>

	* CommonRocks.cs: Add Version.IsEmpty() rock

2008-10-25  Cedric Vivier <cedricv@neonux.com>
